<resources>
    <string name="app_name">OPKeeper</string>
    <string name="Goal_Intro">Create goals and challenges to move towards them with our help</string>
    <string name="your_goal">Your goal</string>
    <string name="your_challenge">Your challenge</string>
    <string name="goal">Goal</string>
    <string name="Euro">€</string>
    <string name="Zero">0</string>
    <string name="procent_of_savings">Percentage of deposits from your savings</string>
    <string name="create">Create</string>
    <string name="challenge">Challenge</string>
    <string name="challenge_roles">Live a week on</string>
    <string name="Challenge_Motivation">Can you live for a month on the specified amount?</string>
    <string name="share">Share</string>
    <string name="patterns">Patterns</string>
    <string name="budget_leak">Budget leak</string>
    <string name="Server_Base_URL">http://77.50.7.230:8080/</string>
    <string name="description">Description</string>
    <string name="success_in_achieving_the_goal">Success in achieving the goal</string>
    <string name="percentage_of_savings_from_the_total_amount_of_the_main_goal">Percentage of savings from the total amount of the main goal "50/30/20"</string>
    <string name="amount_per_month">Amount per month</string>
    <string name="average_amount">Average amount</string>
    <string name="pattern">Pattern</string>
    <string name="obligatory">Obligatory</string>
    <string name="leisure">Leisure</string>
    <string name="capacity">Capacity</string>
</resources>