<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/addBottomSheet">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/newGoalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/valueOfAmount"
                android:layout_alignParentStart="true"
                android:hint="@string/Zero"/>
            <TextView
                android:id="@+id/valueOfAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/Euro"
                android:textColor="@color/darkOrange"
                android:textSize="@dimen/normal_text_size"
                android:layout_centerVertical="true"
                android:padding="@dimen/small_padding"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/procent_of_savings"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:textColor="@color/TextColor"
            android:textSize="17.5sp"
            android:layout_marginTop="@dimen/small_margin"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarProcent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="@dimen/normal_padding"
            android:progressDrawable="@drawable/seekbar_background"
            android:thumb="@drawable/seekbar_thumb"
            android:splitTrack="false"/>
        <Button
            android:id="@+id/sendGoal"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkOrange"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>