<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/addBottomSheet">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/normal_margin">
        <EditText
            android:id="@+id/newChallengeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/challenge"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/challengeRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge_roles"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/newChallengeAmount"
                android:textColor="@color/TitleColor"
                android:fontFamily="@font/poppins"
                android:includeFontPadding="false"
                android:textSize="@dimen/normal_text_size"/>
            <EditText
                android:id="@+id/newChallengeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/valueOfAmount"
                android:hint="100"/>
            <TextView
                android:id="@+id/valueOfAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/Euro"
                android:textColor="@color/darkOrange"
                android:textSize="@dimen/normal_text_size"
                android:layout_centerVertical="true"
                android:padding="@dimen/small_padding"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Challenge_Motivation"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:textColor="@color/TextColor"
            android:textSize="17.5sp"
            android:layout_marginTop="@dimen/small_margin"/>
        <Button
            android:id="@+id/sendChallenge"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkOrange"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>