<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical">


    <EditText
        android:id="@+id/addPatternName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pattern"
        android:fontFamily="@font/poppins"
        android:textColor="@color/TitleColor"
        android:textSize="@dimen/normal_text_size"
        android:includeFontPadding="false"
        android:layout_margin="@dimen/normal_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:id="@+id/addPatternButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_below="@id/addPatternName">
        <Button
            android:id="@+id/addPatternObligatory"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/not_active_btn"
            android:text="@string/obligatory"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:layout_marginBottom="@dimen/small_margin"
            android:textSize="@dimen/normal_text_size"/>
        <Button
            android:id="@+id/addPatterLeisure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/not_active_btn"
            android:text="@string/leisure"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:layout_marginBottom="@dimen/small_margin"
            android:textSize="@dimen/normal_text_size"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addPatternsTransactionsRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:layout_below="@id/addPatternButtonContainer"/>

    <Button
        android:id="@+id/addPatternCommit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/normal_margin"
        tools:text="Change"
        android:background="@color/darkOrange"
        android:padding="@dimen/normal_padding"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:layout_marginBottom="@dimen/small_margin"
        android:textSize="@dimen/normal_text_size"/>

</RelativeLayout>